--- a/master/UI/param_dread_window.ui
+++ b/master/UI/param_dread_window.ui
@@ -1198,6 +1198,18 @@
            </widget>
           </item>
           <item>
+           <widget class="QLabel" name="label_status">
+            <property name="font">
+             <font>
+              <pointsize>12</pointsize>
+             </font>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="verticalSpacer_15">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
