--- a/master/UI/param_dread_window.ui
+++ b/master/UI/param_dread_window.ui
@@ -1292,6 +1292,22 @@
                </widget>
               </item>
               <item>
+               <widget class="QPushButton" name="PushButton_export">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>50</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>导出</string>
+                </property>
+               </widget>
+              </item>
+              <item>
                <widget class="QPushButton" name="PushButton_clear">
                 <property name="enabled">
                  <bool>true</bool>
